# ocs-deploy

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  pyproject.toml  tasks.py  tasks_aws.py  tasks_aws_utils.py  tasks_secrets.py
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-04-28-inbound-email.md  2026-04-30-ses-inbound-size-fix.md
docs/superpowers/specs/: 2026-04-28-inbound-email-design.md  2026-04-30-ses-inbound-size-fix-design.md  2026-06-05-run-script-command-design.md
ocs_deploy/: config.py  detective.py  domains.py  ec2_tmp.py  ecr.py  fargate.py  github.py  guardDuty.py  ocs_deploy_stack.py  rds.py  redis.py  s3.py  secrets.yml  securityhub.py  ses_inbound.py  stacks.py  vpc.py  waf.py  waf_utils.py
ocs_deploy/cli/: tasks.py  tasks_aws.py  tasks_aws_utils.py  tasks_secrets.py  tasks_utils.py
ocs_deploy/lambdas/anymail_forwarder/: handler.py
ocs_deploy/tests/: conftest.py  test_app_synth.py  test_config.py  test_conftest_smoke.py  test_domains_stack.py  test_fargate_stack.py  test_secrets_yaml.py  test_ses_inbound_stack.py  test_waf_regex_compaction.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: check_old_domain_usage.py  widget_version_report.py
tests/unit/: test_ocs_deploy_stack.py
